fix: prevent flickering image when interacting with input and some refactoring

--- a/src/features/ui/FormTextContent/FormTextContent.module.scss
+++ b/src/features/ui/FormTextContent/FormTextContent.module.scss
@@ -7,4 +7,9 @@
 		color: $success-green;
 		margin-bottom: 0;
 	}
+
+	&[data-variant='warning'] {
+		color: $red-100;
+		margin-bottom: 0;
+	}
 }
